# E2E-ML-Project

./: .gitignore  README copy.md  README.md  app.py  pyproject.toml  requirements.txt  student_app.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
exploratory_data_analysis/: student_performance.ipynb
html_template/: home.html  index.html
html_templates/: home.html
src/components/: data_ingestion.py  data_splitter.py  data_transform.py  hyperparmeter_tuner.py  model_evaluator.py  model_manager.py  model_selector.py  models.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
src/utils/: __init__.py  exception.py  logger.py  model_persistence.py  plotter.py
